Media queries and page scalability fixes

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <li><a class="nav-link" href="#">String Templates</a></li>
           <li><a class="nav-link" href="#">Date Get Methods</a></li>
           <li><a class="nav-link" href="#">Date Set Methods</a></li>
-          <li><a class="nav-link" href="#Reference">Reference</a></li>
+          <li><a class="nav-link" href="#Reference" style="padding-bottom: 30px;">Reference</a></li>
         </ul>
       </div>
     </div>
@@ -87,7 +87,7 @@
       </article>
     </section>
     <section class="main-section" id="What_you_should_know">
-      <header>What you should already know</header>
+      <header>What you should know</header>
       <article>
         <p>This guide assumes you have the following basic background:</p>
   
